k8s/frontend-resources/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mean-stack
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
